--- a/web/src/main/webapp/resources/templates/template.xhtml
+++ b/web/src/main/webapp/resources/templates/template.xhtml
@@ -9,6 +9,7 @@
       xml:lang="en" lang="en">
 
 <h:head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
     <link rel="stylesheet"
@@ -21,11 +22,15 @@
     <link href="https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic" rel="stylesheet" type="text/css" />
     <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700" rel="stylesheet" type="text/css" />
 
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+
     <h:outputStylesheet name="css/default.css" type="text/css" />
     <title><ui:insert name="title">Zotteltec</ui:insert></title>
 </h:head>
 
-<body>
+<h:body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
             <a class="navbar-brand" href="index.xhtml">Zotteltec</a>
@@ -39,17 +44,25 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                <div class="navbar-nav">
-                    <a class="nav-link" href="index.xhtml">Home</a>
-                    <a class="nav-link" href="register.xhtml">Register</a>
-                </div>
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="register.xhtml">Register</a>
+                    </li>
+                </ul>
+                <span class="navbar-nav navbar-text nav-item nav-link text-dark">
+                    <a class="nav-link" href="login.xhtml">Login</a>
+                </span>
             </div>
         </div>
     </nav>
 
-    <div id="content" class="container">
-        <ui:insert name="content">Zotteltec</ui:insert>
+    <h:messages globalOnly="true" showDetail="false" showSummary="true"
+                infoClass="text-success" warnClass="text-warning" errorClass="text-danger" />
+
+    <div class="container">
+        <ui:insert id="content" name="content"></ui:insert>
     </div>
-</body>
+
+</h:body>
 
 </html>
