--- a/web/src/main/webapp/resources/templates/template.xhtml
+++ b/web/src/main/webapp/resources/templates/template.xhtml
@@ -9,24 +9,31 @@
       xml:lang="en" lang="en">
 
 <h:head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
 
     <link rel="stylesheet"
           href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
           integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z"
           crossorigin="anonymous"
-          type="text/css" />
+          type="text/css"/>
 
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css" />
-    <link href="https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic" rel="stylesheet" type="text/css" />
-    <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700" rel="stylesheet" type="text/css" />
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css"/>
+    <link href="https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic" rel="stylesheet"
+          type="text/css"/>
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700" rel="stylesheet" type="text/css"/>
 
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+            integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+            crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+            integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+            crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
+            integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
+            crossorigin="anonymous"></script>
 
-    <h:outputStylesheet name="css/default.css" type="text/css" />
+    <h:outputStylesheet name="css/default.css" type="text/css"/>
     <title><ui:insert name="title">Zotteltec</ui:insert></title>
 </h:head>
 
@@ -49,15 +56,30 @@
                         <a class="nav-link" href="register.xhtml">Register</a>
                     </li>
                 </ul>
-                <span class="navbar-nav navbar-text nav-item nav-link text-dark">
-                    <a class="nav-link" href="login.xhtml">Login</a>
-                </span>
+                <ui:fragment rendered="#{customerSessionJSF.authenticated eq true}">
+                    <span class="navbar-nav navbar-text nav-item dropdown text-dark">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            #{customerSessionJSF.customerRepresentation}
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <a class="dropdown-item text-dark " href="#">Profiel</a>
+                            <a class="dropdown-item text-dark" href="#">Shopping cart</a>
+                            <div class="dropdown-divider"></div>
+                            <h:form><h:commandButton action="#{customerSessionJSF.logout}" value="Logout" class="dropdown-item text-dark" /></h:form>
+                        </div>
+                    </span>
+                </ui:fragment>
+                <ui:fragment rendered="#{customerSessionJSF.authenticated eq false}">
+                    <span class="navbar-nav navbar-text nav-item nav-link text-dark">
+                        <a class="nav-link" href="login.xhtml">Login</a>
+                    </span>
+                </ui:fragment>
             </div>
         </div>
     </nav>
 
     <h:messages globalOnly="true" showDetail="false" showSummary="true"
-                infoClass="text-success" warnClass="text-warning" errorClass="text-danger" />
+                infoClass="text-success" warnClass="text-warning" errorClass="text-danger"/>
 
     <div class="container">
         <ui:insert id="content" name="content"></ui:insert>
