--- a/web/src/main/webapp/resources/templates/template.xhtml
+++ b/web/src/main/webapp/resources/templates/template.xhtml
@@ -59,7 +59,7 @@
                             #{customerSessionJSF.customer.representation}
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item text-dark " href="customer_product.xhtml">My Products</a>
+                            <a class="dropdown-item text-dark " href="customer_overviewproduct.xhtml">My Products</a>
                             <a class="dropdown-item text-dark " href="customer_profile.xhtml">Profiel</a>
                             <a class="dropdown-item text-dark" href="#">Shopping cart</a>
                             <div class="dropdown-divider"></div>
