--- a/web/src/main/webapp/resources/templates/template.xhtml
+++ b/web/src/main/webapp/resources/templates/template.xhtml
@@ -56,7 +56,7 @@
                 <ui:fragment rendered="#{customerSessionJSF.authenticated eq true}">
                     <span class="navbar-nav navbar-text nav-item dropdown text-dark">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            #{customerSessionJSF.persistPageCustomer.representation}
+                            #{customerSessionJSF.customer.representation}
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <a class="dropdown-item text-dark " href="customer_overviewproduct.xhtml">My Products</a>
