--- a/web/src/main/webapp/resources/templates/template.xhtml
+++ b/web/src/main/webapp/resources/templates/template.xhtml
@@ -59,8 +59,8 @@
                             #{customerSessionJSF.customer.representation}
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item text-dark " href="customer_overview.xhtml">My Products</a>
-                            <a class="dropdown-item text-dark " href="customer_profile.xhtml">Profiel</a>
+                            <a class="dropdown-item text-dark " href="overview.xhtml">Product</a>
+                            <a class="dropdown-item text-dark " href="profile.xhtml">Profiel</a>
                             <a class="dropdown-item text-dark" href="#">Shopping cart</a>
                             <div class="dropdown-divider"></div>
                             <h:form><h:commandButton action="#{customerSessionJSF.logout}" value="Logout" class="dropdown-item text-dark" /></h:form>
@@ -79,7 +79,7 @@
         </div>
     </nav>
     <div class="container">
-        <h:messages style="list-style: none" globalOnly="true" showDetail="false" showSummary="true" class="alert alert-success px-5 mt-4 mb-0" role="alert" />
+        <h:messages style="list-style: none" globalOnly="true" showDetail="false" showSummary="true" class="alert alert-success mt-4 mb-0" role="alert" />
         <ui:insert id="content" name="content"></ui:insert>
     </div>
 </h:body>
