--- a/web/src/main/webapp/resources/templates/template.xhtml
+++ b/web/src/main/webapp/resources/templates/template.xhtml
@@ -62,7 +62,7 @@
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <a class="dropdown-item text-dark " href="overview.xhtml">Product</a>
                             <a class="dropdown-item text-dark " href="profile.xhtml">Profiel</a>
-                            <a class="dropdown-item text-dark" href="#">Shopping cart</a>
+                            <a class="dropdown-item text-dark" href="cart.xhtml">Shopping cart</a>
                             <div class="dropdown-divider"></div>
                             <h:form><h:commandButton action="#{customerSessionJSF.logout}" value="Logout"
                                                      class="dropdown-item text-dark"/></h:form>
