--- a/web/src/main/webapp/resources/templates/template.xhtml
+++ b/web/src/main/webapp/resources/templates/template.xhtml
@@ -64,6 +64,7 @@
                             <a class="dropdown-item text-dark " href="overview.xhtml">Product</a>
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item text-dark " href="purchase.xhtml">Purchase</a>
+                            <a class="dropdown-item text-dark " href="sales.xhtml">Sale</a>
                             <a class="dropdown-item text-dark " href="profile.xhtml">Profiel</a>
                             <div class="dropdown-divider"></div>
                             <h:form><h:commandButton action="#{customerSessionJSF.logout}" value="Logout"
