--- a/web/src/main/webapp/resources/templates/template.xhtml
+++ b/web/src/main/webapp/resources/templates/template.xhtml
@@ -34,13 +34,13 @@
             crossorigin="anonymous"></script>
 
     <h:outputStylesheet name="css/default.css" type="text/css"/>
-    <title><ui:insert name="title">Zotteltec</ui:insert></title>
+    <title><ui:insert name="title">CheorgesTec</ui:insert></title>
 </h:head>
 
 <h:body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
-            <a class="navbar-brand" href="index.xhtml">Zotteltec</a>
+            <a class="navbar-brand" href="index.xhtml">CheorgesTec</a>
             <button class="navbar-toggler"
                     type="button"
                     data-toggle="collapse"
